test/libsolidity/syntaxTests/pragma/experimental_solidity.sol
pragma experimental solidity;
// ====
// EVMVersion: >=constantinople
// ----
// Warning 2264: (0-29): Experimental features are turned on. Do not use experimental features on live deployments.
// UnimplementedFeatureError 6547: Experimental Analysis is not implemented yet.
